--- a/deskover-dashboard-website/src/app/components/home/manage/categories/categories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/categories.component.html
@@ -30,7 +30,7 @@
             </select>
           </div>
           <div class="col d-flex align-items-center justify-content-end">
-            <button type="button" class="btn btn-accent rounded-pill" (click)="newCategory()" placement="left"
+            <button type="button" class="btn bg-faded-accent rounded-pill" (click)="newCategory()" placement="left"
                     tooltip="Thêm">
               <i class="fas fa-plus text-accent"></i>
             </button>
