--- a/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
@@ -40,7 +40,7 @@
             </select>
           </div>
           <div class="col d-flex align-items-center justify-content-center justify-content-md-end">
-            <button type="button" class="btn btn-accent w-sm-100 rounded-pill" (click)="newSubcategory()"
+            <button type="button" class="btn bg-faded-accent w-sm-100 rounded-pill" (click)="newSubcategory()"
                     placement="left"
                     tooltip="Thêm">
               <i class="fas fa-plus text-accent d-none d-md-inline-block"></i>
