Fix image not show

--- a/deskover-dashboard-website/src/app/components/pages/login/login.component.html
+++ b/deskover-dashboard-website/src/app/components/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="card text-bg-light" style="--bs-bg-opacity: .8;">
   <div class="card-header text-center">
     <a [routerLink]="['/']" class="h1">
-      <img width="872" class="img-fluid" src="../../../../assets/images/logo/logo.png">
+      <img width="872" class="img-fluid" src="assets/images/logo/logo.png">
     </a>
   </div>
   <div class="card-body">
