--- a/deskover-dashboard-website/src/styles.scss
+++ b/deskover-dashboard-website/src/styles.scss
@@ -103,7 +103,7 @@ tr, td {
 }
 
 .login-page {
-  background-image: url('/assets/images/login-bg.jpg');
+  background-image: url('assets/images/login-bg.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
