--- a/deskover-dashboard-website/src/styles.scss
+++ b/deskover-dashboard-website/src/styles.scss
@@ -56,6 +56,7 @@ tr, td {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 
   .file-drop-input {
     display: block;
