--- a/deskover-dashboard-website/src/app/components/home/manage/categories/categories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/categories.component.html
@@ -53,7 +53,7 @@
             <tbody *ngIf="categories?.length !== 0">
             <tr class="table-light" *ngFor="let category of categories; let i = index">
               <td class="align-middle">
-                <img src="{{ category.imgUrl || 'assets/images/no-image.png' }}" class="img-thumbnail img-50">
+                <img [src]="getSrc(category.img)" alt=" " class="img-thumbnail img-50">
               </td>
               <td class="align-middle">
                 {{ category.name }}
@@ -117,10 +117,10 @@
       <div class="modal-body">
         <form #categoryForm="ngForm">
           <div class="row">
-            <div class="col-12 col-md-5 mb-3">
-              <div class="d-flex justify-content-center align-items-center file-drop-area border rounded-4">
-                <img src="{{category?.imgUrl ?? 'assets/images/no-image.png'}}" class="img-fluid w-100">
-                <input type="file" name="image" class="file-drop-input" accept="image/*"
+            <div class="col-12 col-md-5">
+              <div class="file-drop-area ratio ratio-1x1 mb-3">
+                <img [src]="categoryImgPreview" class="img-fluid img-thumbnail" alt=" ">
+                <input type="file" name="file" class="file-drop-input" accept="image/*"
                        (change)="selectedImageChanged($event)">
               </div>
             </div>
