--- a/deskover-dashboard-website/src/app/components/home/manage/orders/orders.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/orders/orders.component.html
@@ -24,7 +24,7 @@
             <label [for]="'filter-active'" class="col-form-label">Trạng thái:</label>
           </div>
           <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
-            <select id="filter-category" class="form-select" [(ngModel)]="orderStatusCode" (change)="refreshOrderTable()">
+            <select id="filter-category" class="form-select" [(ngModel)]="orderStatusCode" (change)="rerender()">
               <option [ngValue]="null">-- Tất cả --</option>
               <option *ngFor="let orderStatus of orderStatuses"
                       [ngValue]="orderStatus.code">{{orderStatus.status}}</option>
@@ -32,7 +32,7 @@
           </div>
           <div class="col d-flex align-items-center justify-content-center justify-content-md-end">
             <button type="button" class="btn bg-faded-accent w-sm-100 rounded-pill"
-              (click)="orderStatusCode = 'C-XN'; refreshOrderTable()">
+              (click)="orderStatusCode = 'C-XN'; rerender()">
               <span class="text-accent">Đơn chờ xác nhận</span>
             </button>
           </div>
@@ -49,14 +49,12 @@
               <th class="align-middle">Mã đơn hàng</th>
               <th class="align-middle">Tên khách hàng</th>
               <th class="align-middle">Địa chỉ</th>
-              <!--<th class="align-middle text-center">Đơn giá</th>-->
+              <th class="align-middle text-center">Đơn giá</th>
               <th class="align-middle text-center">Ngày tạo</th>
-              <th class="align-middle text-center">
-                Người duyệt
-              </th>
               <th class="align-middle" [ngClass]="orderStatusCode !== null ? 'd-none' : 'd-table-cell'">
-                Trạng thái
+                Trạng thái đơn hàng
               </th>
+              <th class="align-middle">Thanh toán</th>
               <th class="align-middle text-end"></th>
             </tr>
             </thead>
@@ -75,14 +73,18 @@
                 {{ order.orderDetail.address }}
               </td>
               <td class="align-middle text-center">
-                {{ order.createdAt | date: 'dd/MM/yyyy' }}
+                {{ order.unitPrice | number:'1.0-0' }}₫
               </td>
               <td class="align-middle text-center">
-                {{ order.modifiedBy ? order.modifiedBy : '-' }}
+                {{ order.createdAt | date: 'dd/MM/yyyy' }}
               </td>
               <td class="align-middle" [ngClass]="orderStatusCode !== null ? 'd-none' : 'd-table-cell'">
-                <span class="badge"
-                      [ngClass]="setBackgroundByStatus(order.orderStatus.code)">{{ order.orderStatus.status }}</span>
+                <span class="badge bg-opacity-25 text-dark fw-normal fs-6"
+                      [ngClass]="getClassesByOrder(order.orderStatus.code)">{{ order.orderStatus.status }}</span>
+              </td>
+              <td class="align-middle">
+                <span
+                  [ngClass]="getClassesByPayment(order.statusPayment.code)">{{ order.statusPayment.status }}</span>
               </td>
               <td class="align-middle text-end">
                 <button type="button" class="btn btn-sm btn-success me-1" placement="top" tooltip="Duyệt đơn"
@@ -120,7 +122,7 @@
     <h4 id="order-detail-dialog" class="modal-title pull-left text-uppercase text-primary fw-bold">
       {{ order.orderCode }}
       <span class="badge ms-1"
-            [ngClass]="setBackgroundByStatus(order.orderStatus.code)">{{order.orderStatus.status}}</span>
+            [ngClass]="getClassesByOrder(order.orderStatus.code)">{{order.orderStatus.status}}</span>
     </h4>
     <button type="button" class="close btn-close pull-right" aria-label="Close" (click)="modalRef?.hide()">
       <span aria-hidden="true" class="visually-hidden">&times;</span>
